infra/k8s/organizer-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organizer-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: organizer
  template:
    metadata:
      labels:
        app: organizer
    spec:
      containers:
        - name: organizer
          image: tournaments/organizer
---
apiVersion: v1
kind: Service
metadata:
  name: organizer-srv
spec:
  selector:
    app: organizer
  ports:
    - port: 3000
      targetPort: 3000
