infra/k8s/participation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: participation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: participation
  template:
    metadata:
      labels:
        app: participation
    spec:
      containers:
        - name: participation
          image: tournaments/participation
---
apiVersion: v1
kind: Service
metadata:
  name: participation-srv
spec:
  selector:
    app: participation
  ports:
    - port: 3002
      targetPort: 3002
