infra/k8s/postgres-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-postgres
  template:
    metadata:
      labels:
        app: user-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: user-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: user-postgres-srv
spec:
  selector:
    app: user-postgres
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tournament-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tournament-postgres
  template:
    metadata:
      labels:
        app: tournament-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: tournament-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: tournament-postgres-srv
spec:
  selector:
    app: tournament-postgres
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: participation-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: participation-postgres
  template:
    metadata:
      labels:
        app: participation-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: participation-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: participation-postgres-srv
spec:
  selector:
    app: participation-postgres
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organizer-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: organizer-postgres
  template:
    metadata:
      labels:
        app: organizer-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: organizer-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: organizer-postgres-srv
spec:
  selector:
    app: organizer-postgres
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query-postgres
  template:
    metadata:
      labels:
        app: query-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: query-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: query-postgres-srv
spec:
  selector:
    app: query-postgres
  ports:
    - port: 5432
      targetPort: 5432
