infra/k8s/tournament-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tournament-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tournament
  template:
    metadata:
      labels:
        app: tournament
    spec:
      containers:
        - name: tournament
          image: tournaments/tournament
---
apiVersion: v1
kind: Service
metadata:
  name: tournament-srv
spec:
  selector:
    app: tournament
  ports:
    - port: 3001
      targetPort: 3001
